fix(filename): add overflow property for both child and parent div

--- a/packages/form/src/assets/css/fileInput.css
+++ b/packages/form/src/assets/css/fileInput.css
@@ -41,6 +41,7 @@
   background: lightgray;
 }
 
+.file-list-overlay .selected li .info .details,
 .file-input .selected li .info .details > span {
   overflow: clip;
   text-overflow: ellipsis;
